# fast-hampath

./: .gitignore  Cargo.toml  notes.md
.github/workflows/: pull_request.yml  push.yml  run-tests.yml
benches/: slow_benchmarks.rs  time_benchmarks.rs
src/: fastpath.rs  fastpath_naive.rs  lib.rs  main.rs  perm_ll.rs  slowpath.rs  tngraph.rs
subdir/src/: fastpath.rs  lib.rs  main.rs
