[package]
name = "fast-hampath"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"
typed-arena = "2.0.1"

[dev-dependencies]
criterion = "0.3.5"

[[bench]]
name = "slow_benchmarks"
harness = false

[lib]
bench = false

[[bin]]
name = "time-hampath"
path = "src/main.rs"
bench = false